--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "elemam_v4",
-  "version": "0.1.0",
+  "version": "0.4.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -9,9 +9,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/vue-fontawesome": "^3.0.5",
+    "bcryptjs": "^2.4.3",
+    "core-js": "^3.34.0",
+    "howler": "^2.2.4",
+    "mdb-vue-ui-kit": "^4.1.1",
+    "moment": "^2.29.4",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vuetify": "^3.4.6",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
@@ -30,9 +39,15 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
+    "init": "^0.1.2",
     "jest": "^27.0.5",
+    "npx": "^10.2.2",
     "prettier": "^2.4.1",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "sass-loader": "^12.0.0",
+    "tailwindcss": "^3.3.6"
+  },
+    "vue": {
+    "__VUE_PROD_HYDRATION_MISMATCH_DETAILS__": false
   }
 }
