--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.5",
     "bcryptjs": "^2.4.3",
     "core-js": "^3.34.0",
+    "firebase": "^10.7.2",
     "howler": "^2.2.4",
     "mdb-vue-ui-kit": "^4.1.1",
     "moment": "^2.29.4",
@@ -46,8 +47,5 @@
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "tailwindcss": "^3.3.6"
-  },
-    "vue": {
-    "__VUE_PROD_HYDRATION_MISMATCH_DETAILS__": false
   }
 }
