--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "firebase": "^10.7.2",
     "howler": "^2.2.4",
     "mdb-vue-ui-kit": "^4.1.1",
-    "moment": "^2.29.4",
+    "moment": "^2.30.1",
+    "unix": "^0.0.0",
     "vue": "^3.2.13",
+    "vue-material-time-picker": "^0.0.8",
     "vue-router": "^4.0.3",
     "vuetify": "^3.4.6",
     "vuex": "^4.0.0"
